mule-user-guide/v/3.2/studio-endpoints.adoc
=  Studio终端

[%header%autowidth.spread]
|===
| image:check.png[查]  |要熟悉本次讨论中使用的术语，请参阅 link:/mule-user-guide/v/3.2/mule-studio-essentials[Mule Studio Essentials]和 link:/mule-user-guide/v/3.2/the-studio-palette[工作室调色板]。

|===

== 端点概述

终端将消息传入和传出Mule流，通常传递给外部资源，如数据库，Web客户端或电子邮件服务器，但它们也可以与其他Mule流交换消息。诸如HTTP，JMS和WMQ之类的特定端点都使用特定的通道（即传输协议）来传输消息。

=== 关于入站端点

驻留在流程开始处并充当*Message Source*的{​​{0}}在每次接收到消息时触发一个新的流程实例。

image:InboundEndpointExample.png[InboundEndpointExample]

每个传入消息必须到达接收端点支持的特定传输信道。例如，电子邮件可以到达POP3或IMAP入站端点，但文件必须使用FTP，文件或SFTP端点。

==== 关于复合来源

一个特殊的Studio构建块通常放置在流的开头，称为*Composite Source Scope*，允许您封装接收相同类型数据的两个或多个端点（例如，电子邮件，文件，数据库映射或HTML）到单个消息处理块中。每个嵌入式端点在其特定的通道上侦听传入的消息。无论哪个端点首先收到一条消息，都会成为该流程特定实例的消息源。

将Composite Source Scope拖动到Studio Palette的消息流画布上，然后将端点拖到Composite Source Scope处理块中。然后，复合源允许每个嵌入式端点在收到传入消息时充当临时非独占消息源。

=== 关于出站端点

如果端点不是流中的第一个构建块（即消息源），则它将被指定为*Outbound Endpoint*，因为它使用它支持的特定传输通道（如SMTP，HTTP或JDBC）将消息分发到流之外的目标，其范围可以从文件系统到电子邮件服务器到Web客户端，还可以包括其他Mule流。

在许多情况下，*Outbound Endpoint*通过将完全处理的消息分发到其最终的外部目标来完成流程。但是，出站端点并不总是完成流程处理，因为它们也可能存在于流程的中间，将数据分配给外部源，并将该数据（或其他数据）传递给流中的下一个消息处理器。

image:OutboundEndpointExample.png[OutboundEndpointExample]

=== 关于请求 - 响应端点

某些端点设置为**request-response exchange pattern**时，会变成既"hybrid"端点既接受传入消息（因此充当消息源或入站端点），又将处理后的消息结果分发回其原始发件人（因此充当出站端点）。此外，请求响应端点可以在特定情况下出现在流程的开始，中间或结束。

== 配置

[%header%autowidth.spread]
|===
| image:check.png[查]  | Studio附带的预打包终端除了特定于上下文的值以外，只需要很少的配置。在实际情况下，Studio会根据需要提供可覆盖的默认值。 Studio还捆绑了特定端点的所有必需代码资源。

|===

终端配置包含两个阶段：

. 将消息流中的端点放在消息流画布上。
. 通过端点的图形*Properties*窗格配置许多特定于上下文的值，您可以通过双击端点图标来打开该窗格。

[%header%autowidth.spread]
|===
| image:warning.png[警告]  |当您创建特定的端点（Ajax，JDBC，JMS，SMTP和文件）时，您必须创建相应的全局连接器。有关更多信息，请参阅： link:/mule-user-guide/v/3.2/configuring-global-mule-elements[配置全球Mule元素]。

|===

尽管各种端点都有独特的属性，但这些构建模块中的大多数都具有共同的属性。

[%header%autowidth.spread]
|===
| image:warning.png[警告]  |本页面显示的端点属性窗格是典型的，但对所有情况都不是确定的。请始终记住，特定的端点属性窗格和单个属性字段会根据端点的类型以及该端点在流中的使用方式而有所不同。

|===

=== 常规选项卡

image:HTTPEndpointGen-1.png[HTTPEndpointGen-1]

通常，*General*标签为以下内容提供了字段：

[%header%autowidth.spread]
|===
|属性 |说明
| *Display Name*  |默认为通用端点名称。更改显示名称（必须为字母数字）以反映端点的特定角色，例如`Order Entry Endpoint`
| *Exchange-Pattern*  |定义客户端和服务器之间的交互。可用的模式是*one-way*和**request-response**。单向交换模式假设服务器不需要响应，而请求 - 响应交换模式等待服务器响应，然后才允许消息处理继续。
| *Enable HTTPS*  |激活端点的SSL。选中该框以启用SSL安全性。
| *Host*  |默认名称是`localhost`。输入服务器的完全限定域名（FQDN）或IP地址。
| *Port*  |用于连接到服务器的端口号。 （例如80）
| *Path*  |允许使用路径而不是用户名和密码连接到服务器。例如/ enter / the / path
|===

取决于端点类型（入站或出站）;这些附加参数可能会出现在常规选项卡上：

[%header%autowidth.spread]
|===
|属性 |说明
| *Polling Frequency*  |时间是毫秒（ms）以检查传入消息。默认值是*1000*毫秒。
| *Output Pattern*  |从下拉列表中选择模式。在将分析的文件名写入磁盘时使用。
| *FTP Settings*  |检查*Binary*是否启用二进制文件传输。检查*Passive*以启用被动协议。如果客户端位于防火墙后面，请使用被动协议。
| *Query Key*  |输入要使用的查询的关键字。
| *Transaction*  |让您选择要用于事务的元素。使用加号 image:add.png[加]按钮添加Mule交易。

| *Cron Information*  |输入`cron expression`按日期和时间安排事件。
| *Method*  |对消息数据执行的操作。可用的选项有：**OPTION, GET, HEAD, POST, PUT, TRACE, CONNECT and DELETE**。
|===

=== 高级选项卡

image:HTTPEndpointAdv-1.png[HTTPEndpointAdv-1]

对于大多数端点，*Advanced*选项卡包含以下通用属性：

[%header%autowidth.spread]
|===
|属性 |说明
| *Address*  |输入网址。如果使用此属性，请将其包含为URI的一部分。
| *Response Timeout*  |端点等待响应的时间（以毫秒为单位）。
| *Encoding*  |选择运输工具将使用的字符集。例如UTF-8
| *Disable Transport Transformer*  |如果您不想使用端点的默认响应传输，请选中此框。
| *MIME Type*  |从该端点支持的下拉列表中选择一种格式。
|===

根据端点类型（入站或出站），这些附加参数可能出现在“高级”选项卡上：

[%header%autowidth.spread]
|===
|属性 |说明
| *Polling Frequency*  |端点检查传入消息的频率（以毫秒为单位）。
| *Identity File and Passphrase Information*  |输入PKI认证信息。
| *Follow Redirects*  |如果请求是使用GET进行的，并使用redirectLocation标头进行响应，则选中此框将在重定向URL上发出请求。这只适用于使用GET时。
|===

=== 参考选项卡

image:HTTPEndpointRef-1.png[HTTPEndpointRef-1]

通过*References*选项卡，您可以将端点配置为使用先前指定的全局元素设置。您可以为以下设置参考：

[%header%autowidth.spread]
|===
|属性 |说明
| *Connector Reference*  |使用下拉列表为此端点选择以前配置的连接器。如果您尚未为此类端点创建连接器，则可以通过单击*Add*在此窗口中完成此操作。点击*Edit*修改先前创建的全局元素。
| *Endpoint Reference*  |使用下拉列表选择以前配置的全局端点引用。如果您尚未为此类端点创建全局元素，则可以通过单击*Add*从此窗口中完成此操作。点击*Edit*修改先前创建的全局元素。
| *Global Transformers (Request)*  |输入交付前将应用于邮件的变换器列表。变压器将按照他们列出的顺序应用。
| *Global Transformers (Response)*  |输入一个同步转换器列表，它将在传输返回之前应用于响应。
|===

===  HTTP设置标签

image:HTTPEndpointSet-1.png[HTTPEndpointSet-1]

通过*HTTP Settings*标签，您可以输入用于通过HTTP传输连接Web服务的登录凭据。另外，你可以配置一些通用的HTTP设置。

[%header%autowidth.spread]
|===
|属性 |说明
| *User*  |在服务器上进行身份验证的`username`。
| *Password*  |在服务器上进行身份验证的`password`。
| *Content Type*  |定义数据如何封装。内容类型按文本，图像，应用程序和二进制文件进行分类。从下拉列表中选择内容类型。如，`text/plain`
| *Keep Alive*  |选中激活框。选中时，将返回包含连接超时信息的标题。
|===

=== 文档选项卡

*Documentation*标签可让您为端点添加可选的描述性文档。每个端点组件都有一个文档选项卡和可选的说明字段。

image:HTTPEndpointDoc-1.png[HTTPEndpointDoc-1]

[%header%autowidth.spread]
|===
|属性 |说明
| *Documentation*  |输入有关此端点的所有相关信息。当您将鼠标悬停在消息流画布上的端点图标上时，这些注释将显示在Studio中。
|===

==  Studio中提供的端点组件

Studio捆绑了更多的二十几个端点，并且这个列表不断增长。其中三种仅适用于Mule Enterprise Edition，因此，图标采用浅色（而不是黑色）蓝色背景进行渲染，如下表所示：

[%header%autowidth.spread]
|===
|数据库（JDBC） | FTP  | WMQ
| image:JDBC-Endpoint-E-24x16-1.png[JDBC-端点-E-24x16-1]  | image:FTP-Endpoint-E-24x16-1.png[FTP端点的-E-24x16-1]  | image:JMS-Endpoint-E-24x16-1.png[JMS端点的-E-24x16-1]

|===

=== 入站和出站端点

此列表中的端点可以作为入站或出站端点添加到流中。入站端点可以配置为从外部来源（如Web浏览器）接收消息数据，而出站端点可以设置为将消息数据发送到外部方或流中的另一个构建块以供进一步处理。

下表列出了每个端点支持的交换模式。当端点支持多种交换模式时，*bold*中的条目表示默认交换模式。

[%header%autowidth.spread]
|===
|   |端点 |描述 |交换模式 |文档
| image:ajax-endpoint.png[Ajax的端点]  | AJAX  |在Ajax服务器和浏览器之间异步交换消息。 |单向 | link:/mule-user-guide/v/3.2/ajax-endpoint-reference[AJAX参考]


image:JDBC-Endpoint-E-24x16-1.png[JDBC-端点-E-24x16-1]  |数据库（JDBC） |（企业版）。使用JDBC传输协议连接到数据库。 |入站端点仅支持单向交换。出站端点支持*one-way*和请求响应。 | link:/mule-user-guide/v/3.2/database-jdbc-endpoint-reference[JDBC参考]


image:Endpoint2.png[端点2]  |文件 |读取和写入文件系统。 |单向 | link:/mule-user-guide/v/3.2/file-endpoint-reference[文件参考]


image:http-1.png[HTTP-1]  | HTTP  |通过HTTP传输协议发送和接收消息。打开安全性以通过SSL发送HTTPS邮件。 |单向*request-response*  | link:/mule-user-guide/v/3.2/http-endpoint-reference[HTTP参考]


image:Endpoint10.png[Endpoint10]  | Quartz  |生成以指定时间或间隔触发流的事件。 |单向 | link:/mule-user-guide/v/3.2/quartz-endpoint-reference[石英参考]


image:Endpoint11.png[Endpoint11]  | SFTP  |读取和写入SFTP服务器。 | **one-way**，请求响应 | link:/mule-user-guide/v/3.2/sftp-endpoint-reference[SFTP参考]


image:Endpoint13.png[Endpoint13]  | TCP  |通过TCP套接字发送或接收消息。 |单向*request-response*  |参考通用的{{2 }}为本页顶部的端点提供的信息。


image:vm-endpoint.png[VM-端点]  | VM  |通过内部VM组件通信发送和接收消息。 | **one-way**，请求响应 |请参阅通用{ {2}}为此页面顶部的端点提供的信息。

|===

仅限入站端点。=== 仅入站端点

顾名思义，入站端点只能使用消息;他们不能将数据分派到流程外的目的地。例如，POP3和IMAP端点均接收来自电子邮件服务器的消息。

下表列出了每个端点支持的交换模式，其中默认交换模式列在*bold*中。

[%header%autowidth.spread]
|===
|   |端点 |描述 |交换模式 |文档
| image:Endpoint5.png[Endpoint5]  | IMAP  |用于通过IMAP接收邮件的电子邮件传输。打开安全措施以通过SSL发送IMAP邮件。 |单向 | link:/mule-user-guide/v/3.2/imap-endpoint-reference[IMAP参考]


image:Endpoint8.png[Endpoint8]  | Jetty  |允许Mule应用程序使用Jetty服务器通过HTTP接收请求。打开安全机制以通过SSL接收HTTPS邮件。 |单向*request-response*  |请参阅本页顶部为端点提供的通用<<Configuration>>信息。


image:Salesforce-1.png[Salesforce的-1]  | Salesforce（Streaming） |提供使用Mule流与Salesforce API集成的简单方法。 |单向 | {{1} }


image:Twitter-1.png[Twitter的1]  | Twitter（流式传输） |提供一种使用Mule流与Twitter API集成的简单方法。 |单向 | [Twitter云连接器参考]
|===

仅限出站终端。=== 仅出站终端

仅出站端点可以将消息发送到其他构建块或外部资源，但不能直接从外部源接收消息。

[%header%autowidth.spread]
|===
|   |端点 |描述 |交换模式 |文档
| image:Endpoint9.png[Endpoint9]  | SMTP  |通过SMTP协议发送电子邮件。打开安全措施以通过SSL发送SMTP邮件。单向 |  |请参阅本页顶部为端点提供的通用<<Configuration>>信息。

|===
